--- a/colab.ipynb
+++ b/colab.ipynb
@@ -3,15 +3,17 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "colab.ipynb",
-      "private_outputs": true,
+      "name": "NewTunnel.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
-      "machine_shape": "hm"
+      "machine_shape": "hm",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
     },
     "accelerator": "GPU"
   },
@@ -47,6 +49,8 @@
       },
       "source": [
         "#@title **LANGSUNG AJALAH**\n",
+        "\n",
+        "import random, string, urllib.request, json, getpass\n",
         " \n",
         "#Let's Go!!!\n",
         "! #@title GASKEUNMAMANG",
